--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>To-Do App</title>
   <link href="https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap" rel="stylesheet" />
-  <link href="/images/notepad.svg" rel="icon" />
+  <link href="%PUBLIC_URL%/images/notepad.svg" rel="icon" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
